--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
     <link rel="stylesheet" href="assets/css/templatemo-onix-digital.css">
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-<!--
-
-TemplateMo 565 Onix Digital
-
-https://templatemo.com/tm-565-onix-digital
-
--->
   </head>
 
 <body>
@@ -55,7 +48,7 @@ https://templatemo.com/tm-565-onix-digital
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/logo.png">
+              <img src="assets/images/favicon.ico">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
