--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="assets/images/favicon.ico">
+              <link rel="icon" type="ico" href="assets/images/favicon.ico">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
