--- a/index.html
+++ b/index.html
@@ -81,27 +81,27 @@
               <div class="owl-carousel owl-banner">
                 <div class="item header-text">
                   <h6>Welcome to kumars solutions</h6>
-                  <h2>Build <em>your website</em> the best in <span>SEO</span>?</h2>
-                  <p>This is a professional looking HTML Bootstrap 5 website template brought to you by TemplateMo website.</p>
+                  <h2>Build <em>website design just 999 </em> offer <span>SEO</span>?</h2>
+                  <p>iam a professional web designer. looking for  website design just 999 rupees only.</p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover">
                       <a href="#contact">Message Us Now</a>
                     </div>
                     <div class="call-button">
-                      <a href="#"><i class="fa fa-phone"></i> 010-020-0340</a>
+                      <a href="#"><i class="fa fa-phone"></i>+919494941678</a>
                     </div>
                   </div>
                 </div>
                 <div class="item header-text">
                   <h6>Online Marketing</h6>
                   <h2>Get the <em>best ideas</em> for <span>your website</span></h2>
-                  <p>You are NOT allowed to redistribute this template ZIP file on any Free CSS collection websites. Contact us for more info. Thank you.</p>
+                  <p>we build best web site for for your company. Thank you.</p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover">
                       <a href="#services">Our Services</a>
                     </div>
                     <div class="call-button">
-                      <a href="#"><i class="fa fa-phone"></i> 090-080-0760</a>
+                      <a href="#"><i class="fa fa-phone"></i> *919494941678</a>
                     </div>
                   </div>
                 </div>
