--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="item header-text">
                   <h6>Online Marketing</h6>
                   <h2>Get the <em>best ideas</em> for <span>your website</span></h2>
-                  <p>we build best web site for for your company. Thank you.</p>
+                  <p>we build best web site  for your company. Thank you.</p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover">
                       <a href="#services">Our Services</a>
@@ -114,7 +114,7 @@
                       <a href="#video">Watch Videos</a>
                     </div>
                     <div class="call-button">
-                      <a href="#"><i class="fa fa-phone"></i> 050-040-0320</a>
+                      <a href="#"><i class="fa fa-phone"></i> +919494941678</a>
                     </div>
                   </div>
                 </div>
