--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
               <div class="owl-carousel owl-banner">
                 <div class="item header-text">
                   <h6>Welcome to kumars solutions</h6>
-                  <h2>Build <em>website design just 999 </em> offer <span>SEO</span>?</h2>
-                  <p>iam a professional web designer. looking for  website design just 999 rupees only.</p>
+                  <h2>Build <em>seo starting just 9,999 rupee </em> offer <span>SEO</span>?</h2>
+                  <p>make your website in seo .we are give you a best seo offers .</p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover">
                       <a href="#contact">Message Us Now</a>
@@ -94,8 +94,8 @@
                 </div>
                 <div class="item header-text">
                   <h6>Online Marketing</h6>
-                  <h2>Get the <em>best ideas</em> for <span>your website</span></h2>
-                  <p>we build best web site  for your company. Thank you.</p>
+                  <h2>Get the <em>best ideas</em> for <span>your website advertiseing</span></h2>
+                  <p>we are advertise your website in digitally in resanable prices starting just 4,999Thank you.</p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover">
                       <a href="#services">Our Services</a>
@@ -108,7 +108,7 @@
                 <div class="item header-text">
                   <h6>Video Tutorials</h6>
                   <h2>Watch <em>our videos</em> for your <span>projects</span></h2>
-                  <p>Please <a rel="nofollow" href="https://www.paypal.me/templatemo" target="_blank">support us</a> a little via PayPal if this digital marketing HTML template is useful for you. Thank you.</p>
+                  <p>Please give me a chane to servive our service to your companye Thank you.</p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover">
                       <a href="#video">Watch Videos</a>
@@ -158,12 +158,12 @@
             <div class="item">
               <h4>UI / UX Design and Development</h4>
               <div class="icon"><img src="assets/images/service-icon-03.png" alt=""></div>
-              <p>Get to know more about the topic in details</p>
+              <p>Get to know more about the topic in details starting just 999 rupees</p>
             </div>
             <div class="item">
               <h4>Discover &amp; Explore our SEO Tips</h4>
               <div class="icon"><img src="assets/images/service-icon-04.png" alt=""></div>
-              <p>Feel free to use this template for your business</p>
+              <p>seo starting just 9,999 for your business</p>
             </div>
             <div class="item">
               <h4>Optimizing your websites for Speed</h4>
@@ -178,17 +178,17 @@
             <div class="item">
               <h4>Best Content Ideas for your pages</h4>
               <div class="icon"><img src="assets/images/service-icon-03.png" alt=""></div>
-              <p>Feel free to use this template for your business</p>
+              <p>Feel free to use starting 2,999 ₹</p>
             </div>
             <div class="item">
               <h4>Optimizing Speed for your web pages</h4>
               <div class="icon"><img src="assets/images/service-icon-04.png" alt=""></div>
-              <p>Get to know more about the topic in details</p>
+              <p>Get to know more about the topic in details starting just 2999 rupees</p>
             </div>
             <div class="item">
               <h4>Accessibility for mobile viewing</h4>
               <div class="icon"><img src="assets/images/service-icon-01.png" alt=""></div>
-              <p>Get to know more about the topic in details</p>
+              <p>Get to know more about the topic in detail s</p>
             </div>
             <div class="item">
               <h4>Content Ideas for your next project</h4>
@@ -222,7 +222,7 @@
         <div class="col-lg-6">
           <div class="section-heading">
             <h2>Grow your website with our <em>SEO Tools</em> &amp; <span>Project</span> Management</h2>
-            <p>You can browse free HTML templates on Too CSS website. Visit the website and explore latest website templates for your projects.</p>
+            <p>we are give you a better service for seo,and digital marketing</p>
             <div class="row">
               <div class="col-lg-4">
                 <div class="fact-item">
@@ -632,8 +632,8 @@
               <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="360px" frameborder="0" style="border:0" allowfullscreen=""></iframe>
             </div>
             <div class="info">
-              <span><i class="fa fa-phone"></i> <a href="#">010-020-0340<br>090-080-0760</a></span>
-              <span><i class="fa fa-envelope"></i> <a href="#">info@company.com<br>mail@company.com</a></span>
+              <span><i class="fa fa-phone"></i> <a href="#">+919494941678<br>+919494941678</a></span>
+              <span><i class="fa fa-envelope"></i> <a href="#">info@cinemor.in<br>info@cinemor.in</a></span>
             </div>
           </div>
         </div>
@@ -657,7 +657,7 @@
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <input type="text" name="website" id="website" placeholder="Your Website URL" required="">
+                  <input type="text" name="website" id="website" placeholder="https://cinemor.in/" required="">
                 </fieldset>
               </div>
               <div class="col-lg-12">
@@ -688,9 +688,9 @@
         <div class="col-lg-3">
           <div class="about footer-item">
             <div class="logo">
-              <a href="#"><img src="assets/images/logo.png" alt="Onix Digital TemplateMo"></a>
+              <a href="#"><img src="assets/images/logo.png" alt="kumarssolutions"></a>
             </div>
-            <a href="#">info@company.com</a>
+            <a href="#">info@cinemor.in</a>
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -733,9 +733,9 @@
         </div>
         <div class="col-lg-12">
           <div class="copyright">
-            <p>Copyright © 2021 Onix Digital Co., Ltd. All Rights Reserved. 
+            <p>Copyright © 2023 kumars solutions. All Rights Reserved. 
             <br>
-            Designed by <a rel="nofollow" href="https://templatemo.com" title="free CSS templates">TemplateMo</a></p>
+            Designed by kumars solutions</p>
           </div>
         </div>
       </div>
