--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                       <a href="#contact">Message Us Now</a>
                     </div>
                     <div class="call-button">
-                      <a href="#"><i class="fa fa-phone"></i>+919494941678</a>
+                      <a href="tel:+919494941678"><i class="fa fa-phone"></i>+919494941678</a>
                     </div>
                   </div>
                 </div>
