--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                       <a href="#services">Our Services</a>
                     </div>
                     <div class="call-button">
-                      <a href="#"><i class="fa fa-phone"></i> *919494941678</a>
+                      <a href="tel:+919494941678"><i class="fa fa-phone"></i> +919494941678</a>
                     </div>
                   </div>
                 </div>
@@ -114,7 +114,7 @@
                       <a href="#video">Watch Videos</a>
                     </div>
                     <div class="call-button">
-                      <a href="#"><i class="fa fa-phone"></i> +919494941678</a>
+                      <a href="tel:+919494941678"><i class="fa fa-phone"></i> +919494941678</a>
                     </div>
                   </div>
                 </div>
