--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
           <div class="section-heading">
             <h2>Feel free to <em>Contact</em> us via the <span>HTML form</span></h2>
             <div id="map">
-              <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="360px" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.364947742449!2d78.43616721410716!3d17.442238238045842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb90dbe45a0647%3A0xd23970bc1b8371c3!2sVengal%20Rao%20Nagar%2C%20Ameerpet%2C%20Hyderabad%2C%20Telangana%20500038!5e0!3m2!1sen!2sin!4v1674724471638!5m2!1sen!2sin" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="info">
               <span><i class="fa fa-phone"></i> <a href="#">+919494941678<br>+919494941678</a></span>
